--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,5 +1,12 @@
+
 body {
     font-family: Arial, sans-serif;
+    background-image: url('frontend/website-background.webp'); /* Path to your image */
+    background-size: cover; /* Cover the entire page */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    height: 100vh; /* Full height */
+    margin: 0; /* Remove default margin */
 }
 
 button {
