--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -6,24 +6,27 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
-    display: flex; /* Use flexbox to center the form */
-    align-items: center; /* Align items vertically */
-    justify-content: center; /* Align items horizontally */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .form-container {
-    background-color: rgba(0, 0, 0, 0.5); /* Translucent black background */
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
-    border-radius: 15px; /* Rounded corners */
-    width: 80%; /* Adjust width as needed */
-    max-width: 600px; /* Maximum width */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional: adds shadow for better visibility */
+    border-radius: 15px;
+    width: 80%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    color: white;
 }
 
 .form-row {
     display: flex;
-    align-items: center; /* Vertically centers the checkbox and label text */
-    margin: 10px 0; /* Adds some margin for spacing between form rows */
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+    width: 100%;
 }
 
 button {
@@ -39,21 +42,26 @@ button.active {
     color: white;
 }
 
+input[type="range"], input[type="text"], input[type="checkbox"] {
+    box-sizing: border-box;
+    width: 100%;
+}
+
 input[type="range"] {
-    width: calc(100%-10px); /* Ensures full width inside the container */
-    padding: 8px;
-    margin: 5px;
+    width: calc(100% - 10px);
+    margin: 8px 5px;
+    padding: 0;
 }
 
 input[type="text"], input[type="checkbox"] {
-    box-sizing: border-box; /* Content, padding and border are included in the width */
-    width: 100%; /* Ensures full width inside the container */
-    padding: 0px;
-    margin: 0px;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
 }
 
 label, input[type="checkbox"] {
-    display: inline-block;
-    vertical-align: middle; /* Ensures that elements are aligned in the middle relative to each other */
-    margin-right: 5px; /* Space between the label and the checkbox */
+    display: inline-flex;
+    align-items: center;
+    vertical-align: middle;
+    margin-right: 5px;
 }
